# cpp-requestlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
include/: request.hpp
src/: main.cpp  request.cpp
